cmake_minimum_required(VERSION 4.1)
project(cpp)

set(CMAKE_CXX_STANDARD 20)

add_executable(lab2
        lab2/main.cpp
        lab2/Rectangle.h
        lab2/Queue.h
        lab2/FixedQueue.h
        lab2/VectorQueue.h
        lab2/ListQueue.h
        lab2/PriorityQueue.h
        lab2/PriorityQueue.h
        lab2/PriorityQueue.h)

